updates documentation and coverage; adds tests

--- a/docs/1_defining_an_environment.ipynb
+++ b/docs/1_defining_an_environment.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "from collections import OrderedDict\n",
     "import numpy as np \n",
     "from cc.env.envs.common import read_model, ASSETS \n",
-    "from cc.env.sample_from_spec import _spec_from_observation\n",
+    "from cc.utils.sample_from_spec import _spec_from_observation\n",
     "from cc.env import make_env"
    ]
   },
@@ -53,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentPhysics at 0x7f10507ac100>"
+       "<__main__.SegmentPhysics at 0x7f17a30801f0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentTask at 0x7f0ff5194fa0>"
+       "<__main__.SegmentTask at 0x7f17a303bbe0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,16 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TimeStep(step_type=<StepType.MID: 1>, reward=array(0., dtype=float32), discount=array(1., dtype=float32), observation=OrderedDict([('xpos_of_segment_end', array([9.827202e-06], dtype=float32))]))"
+       "TimeStep(step_type=<StepType.FIRST: 0>, reward=None, discount=None, observation=OrderedDict([('xpos_of_segment_end', array([2.5717583e-16], dtype=float32))]))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TimeStep(step_type=<StepType.MID: 1>, reward=array(0., dtype=float32), discount=array(1., dtype=float32), observation=OrderedDict([('xpos_of_segment_end', array([2.221258e-05], dtype=float32))]))"
+       "TimeStep(step_type=<StepType.MID: 1>, reward=array(0., dtype=float32), discount=array(1., dtype=float32), observation=OrderedDict([('xpos_of_segment_end', array([4.913601e-06], dtype=float32))]))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,17 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cc.collect.actor import RandomActor\n",
-    "from cc.visual.policy_for_viewer import policy_for_viewer\n",
-    "from dm_control import viewer\n",
+    "from cc.env.collect import RandomActor\n",
+    "from cc.utils.visual.viewer import launch_viewer\n",
     "\n",
     "actor = RandomActor(env.action_spec(), reset_key=True)\n",
     "\n",
-    "viewer.launch(env, policy_for_viewer(actor))"
+    "launch_viewer(env, actor)"
    ]
   },
   {
