slight rewrite due to additional `loop_result` out

--- a/docs/1_defining_an_environment.ipynb
+++ b/docs/1_defining_an_environment.ipynb
@@ -19,8 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:50:48.118451Z",
+     "iopub.status.busy": "2022-11-25T22:50:48.117854Z",
+     "iopub.status.idle": "2022-11-25T22:50:48.698356Z",
+     "shell.execute_reply": "2022-11-25T22:50:48.689039Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from dm_control.rl import control\n",
@@ -53,16 +60,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:50:48.703414Z",
+     "iopub.status.busy": "2022-11-25T22:50:48.702999Z",
+     "iopub.status.idle": "2022-11-25T22:50:48.812305Z",
+     "shell.execute_reply": "2022-11-25T22:50:48.811980Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentPhysics at 0x7f17a30801f0>"
+       "<__main__.SegmentPhysics at 0x7f8ff34bed30>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,16 +108,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:50:48.843664Z",
+     "iopub.status.busy": "2022-11-25T22:50:48.843407Z",
+     "iopub.status.idle": "2022-11-25T22:50:48.848357Z",
+     "shell.execute_reply": "2022-11-25T22:50:48.848014Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentTask at 0x7f17a303bbe0>"
+       "<__main__.SegmentTask at 0x7f8ff347c310>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,8 +174,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:50:48.849940Z",
+     "iopub.status.busy": "2022-11-25T22:50:48.849783Z",
+     "iopub.status.idle": "2022-11-25T22:50:48.943269Z",
+     "shell.execute_reply": "2022-11-25T22:50:48.942817Z"
+    }
+   },
    "outputs": [],
    "source": [
     "env = make_env(\"two_segments_v1\", random=1)"
@@ -162,8 +190,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:50:48.945266Z",
+     "iopub.status.busy": "2022-11-25T22:50:48.945094Z",
+     "iopub.status.idle": "2022-11-25T22:50:48.949352Z",
+     "shell.execute_reply": "2022-11-25T22:50:48.949033Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -171,7 +206,7 @@
        "TimeStep(step_type=<StepType.FIRST: 0>, reward=None, discount=None, observation=OrderedDict([('xpos_of_segment_end', array([2.5717583e-16], dtype=float32))]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,8 +218,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:50:48.951376Z",
+     "iopub.status.busy": "2022-11-25T22:50:48.951225Z",
+     "iopub.status.idle": "2022-11-25T22:50:48.954256Z",
+     "shell.execute_reply": "2022-11-25T22:50:48.953926Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -192,7 +234,7 @@
        "TimeStep(step_type=<StepType.MID: 1>, reward=array(0., dtype=float32), discount=array(1., dtype=float32), observation=OrderedDict([('xpos_of_segment_end', array([4.913601e-06], dtype=float32))]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,16 +254,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:50:48.973521Z",
+     "iopub.status.busy": "2022-11-25T22:50:48.973257Z",
+     "iopub.status.idle": "2022-11-25T22:50:49.478754Z",
+     "shell.execute_reply": "2022-11-25T22:50:49.478298Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:jax._src.lib.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    }
+   ],
    "source": [
     "from cc.env.collect import RandomActor\n",
     "from cc.utils.visual.viewer import launch_viewer\n",
     "\n",
     "actor = RandomActor(env.action_spec(), reset_key=True)\n",
     "\n",
-    "launch_viewer(env, actor)"
+    "# uncomment to launch a viewer\n",
+    "#launch_viewer(env, actor)"
    ]
   },
   {
@@ -250,7 +316,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "8d9c863fb986fa342e8b7e2ad667cb8566ab6ae40647af51ec8caf787fd66a57"
