--- a/docs/5_save_loading_model_controller.ipynb
+++ b/docs/5_save_loading_model_controller.ipynb
@@ -11,9 +11,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:58:44.417071Z",
+     "iopub.status.busy": "2022-11-25T22:58:44.416590Z",
+     "iopub.status.idle": "2022-11-25T22:58:45.385829Z",
+     "shell.execute_reply": "2022-11-25T22:58:45.385332Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:jax._src.lib.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    }
+   ],
    "source": [
     "from cc import save, load  \n",
     "from cc.examples.feedforward_controller import make_feedforward_controller\n",
@@ -25,8 +48,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:58:45.388114Z",
+     "iopub.status.busy": "2022-11-25T22:58:45.387900Z",
+     "iopub.status.idle": "2022-11-25T22:58:45.487673Z",
+     "shell.execute_reply": "2022-11-25T22:58:45.487268Z"
+    }
+   },
    "outputs": [],
    "source": [
     "env = make_env(\"two_segments_v1\", random=1)\n",
@@ -42,8 +72,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:58:45.489783Z",
+     "iopub.status.busy": "2022-11-25T22:58:45.489582Z",
+     "iopub.status.idle": "2022-11-25T22:58:46.121117Z",
+     "shell.execute_reply": "2022-11-25T22:58:46.120701Z"
+    }
+   },
    "outputs": [],
    "source": [
     "replay_sample = collect(env, controller)\n",
@@ -61,8 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:58:46.123287Z",
+     "iopub.status.busy": "2022-11-25T22:58:46.123088Z",
+     "iopub.status.idle": "2022-11-25T22:58:46.209466Z",
+     "shell.execute_reply": "2022-11-25T22:58:46.209095Z"
+    }
+   },
    "outputs": [
     {
      "ename": "Exception",
@@ -71,8 +115,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m save(controller, \u001b[39m\"\u001b[39;49m\u001b[39mcontroller.pkl\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:16\u001b[0m, in \u001b[0;36msave\u001b[0;34m(obj, path, metadata, verbose)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msave\u001b[39m(obj, path, metadata\u001b[39m=\u001b[39m{}, verbose\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[1;32m     15\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(obj, eqx\u001b[39m.\u001b[39mModule):\n\u001b[0;32m---> 16\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\n\u001b[1;32m     17\u001b[0m             \u001b[39m\"\"\"Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[39m            To de-serialise use `eqx.tree_deserialise_leaves`.\"\"\"\u001b[39;00m\n\u001b[1;32m     19\u001b[0m         )\n\u001b[1;32m     21\u001b[0m     \u001b[39mif\u001b[39;00m metadata \u001b[39m==\u001b[39m {}:\n\u001b[1;32m     22\u001b[0m         \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(path, \u001b[39m\"\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m file:\n",
+      "Cell \u001b[0;32mIn [4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontroller\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcontroller.pkl\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/PYTHON/chain_control/chain_control/cc/core/save_load.py:16\u001b[0m, in \u001b[0;36msave\u001b[0;34m(obj, path, metadata, verbose)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave\u001b[39m(obj, path, metadata\u001b[38;5;241m=\u001b[39m{}, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(obj, eqx\u001b[38;5;241m.\u001b[39mModule):\n\u001b[0;32m---> 16\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\n\u001b[1;32m     17\u001b[0m             \u001b[38;5;124;03m\"\"\"Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;124;03m            To de-serialise use `eqx.tree_deserialise_leaves`.\"\"\"\u001b[39;00m\n\u001b[1;32m     19\u001b[0m         )\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m metadata \u001b[38;5;241m==\u001b[39m {}:\n\u001b[1;32m     22\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n",
       "\u001b[0;31mException\u001b[0m: Not possible. Use `eqx.tree_serialise_leaves(path, obj)` instead.\n            To de-serialise use `eqx.tree_deserialise_leaves`."
      ]
     }
@@ -85,13 +129,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead, we will have to use the more annoying syntax"
+    "Instead, we will have to use the more verbose syntax"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:58:46.211357Z",
+     "iopub.status.busy": "2022-11-25T22:58:46.211233Z",
+     "iopub.status.idle": "2022-11-25T22:58:46.215188Z",
+     "shell.execute_reply": "2022-11-25T22:58:46.214817Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# the extension is convention\n",
@@ -106,8 +157,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:58:46.216618Z",
+     "iopub.status.busy": "2022-11-25T22:58:46.216459Z",
+     "iopub.status.idle": "2022-11-25T22:58:46.222047Z",
+     "shell.execute_reply": "2022-11-25T22:58:46.221739Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -115,7 +173,7 @@
        "FeedforwardController(us=f32[1000,1], count=i32[1])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,13 +186,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What if?"
+    "What if (you still try to do this using `load`)?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-25T22:58:46.223652Z",
+     "iopub.status.busy": "2022-11-25T22:58:46.223447Z",
+     "iopub.status.idle": "2022-11-25T22:58:46.234214Z",
+     "shell.execute_reply": "2022-11-25T22:58:46.233921Z"
+    }
+   },
    "outputs": [
     {
      "ename": "UnpicklingError",
@@ -143,8 +208,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnpicklingError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m load(\u001b[39m\"\u001b[39;49m\u001b[39mcontroller.eqx\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "File \u001b[0;32m~/Documents/PYTHON/chain_control/cc/core/save_load.py:9\u001b[0m, in \u001b[0;36mload\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload\u001b[39m(path):\n\u001b[1;32m      8\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(path, \u001b[39m\"\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m----> 9\u001b[0m         obj \u001b[39m=\u001b[39m cloudpickle\u001b[39m.\u001b[39;49mload(file)\n\u001b[1;32m     10\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\n",
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcontroller.eqx\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/PYTHON/chain_control/chain_control/cc/core/save_load.py:9\u001b[0m, in \u001b[0;36mload\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(path):\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m----> 9\u001b[0m         obj \u001b[38;5;241m=\u001b[39m \u001b[43mcloudpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m obj\n",
       "\u001b[0;31mUnpicklingError\u001b[0m: STACK_GLOBAL requires str"
      ]
     }
@@ -179,7 +244,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "8d9c863fb986fa342e8b7e2ad667cb8566ab6ae40647af51ec8caf787fd66a57"
