--- a/docs/1_defining_an_environment.ipynb
+++ b/docs/1_defining_an_environment.ipynb
@@ -22,10 +22,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-25T22:50:48.118451Z",
-     "iopub.status.busy": "2022-11-25T22:50:48.117854Z",
-     "iopub.status.idle": "2022-11-25T22:50:48.698356Z",
-     "shell.execute_reply": "2022-11-25T22:50:48.689039Z"
+     "iopub.execute_input": "2022-12-21T14:07:46.855220Z",
+     "iopub.status.busy": "2022-12-21T14:07:46.854301Z",
+     "iopub.status.idle": "2022-12-21T14:07:47.446883Z",
+     "shell.execute_reply": "2022-12-21T14:07:47.446345Z"
     }
    },
    "outputs": [],
@@ -63,17 +63,17 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-25T22:50:48.703414Z",
-     "iopub.status.busy": "2022-11-25T22:50:48.702999Z",
-     "iopub.status.idle": "2022-11-25T22:50:48.812305Z",
-     "shell.execute_reply": "2022-11-25T22:50:48.811980Z"
+     "iopub.execute_input": "2022-12-21T14:07:47.451155Z",
+     "iopub.status.busy": "2022-12-21T14:07:47.450134Z",
+     "iopub.status.idle": "2022-12-21T14:07:47.571500Z",
+     "shell.execute_reply": "2022-12-21T14:07:47.571093Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentPhysics at 0x7f8ff34bed30>"
+       "<__main__.SegmentPhysics at 0x7f6255133cd0>"
       ]
      },
      "execution_count": 2,
@@ -111,17 +111,17 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-25T22:50:48.843664Z",
-     "iopub.status.busy": "2022-11-25T22:50:48.843407Z",
-     "iopub.status.idle": "2022-11-25T22:50:48.848357Z",
-     "shell.execute_reply": "2022-11-25T22:50:48.848014Z"
+     "iopub.execute_input": "2022-12-21T14:07:47.596086Z",
+     "iopub.status.busy": "2022-12-21T14:07:47.595894Z",
+     "iopub.status.idle": "2022-12-21T14:07:47.600914Z",
+     "shell.execute_reply": "2022-12-21T14:07:47.600549Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentTask at 0x7f8ff347c310>"
+       "<__main__.SegmentTask at 0x7f62550f2250>"
       ]
      },
      "execution_count": 3,
@@ -177,10 +177,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-25T22:50:48.849940Z",
-     "iopub.status.busy": "2022-11-25T22:50:48.849783Z",
-     "iopub.status.idle": "2022-11-25T22:50:48.943269Z",
-     "shell.execute_reply": "2022-11-25T22:50:48.942817Z"
+     "iopub.execute_input": "2022-12-21T14:07:47.602544Z",
+     "iopub.status.busy": "2022-12-21T14:07:47.602415Z",
+     "iopub.status.idle": "2022-12-21T14:07:47.706124Z",
+     "shell.execute_reply": "2022-12-21T14:07:47.705733Z"
     }
    },
    "outputs": [],
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-25T22:50:48.945266Z",
-     "iopub.status.busy": "2022-11-25T22:50:48.945094Z",
-     "iopub.status.idle": "2022-11-25T22:50:48.949352Z",
-     "shell.execute_reply": "2022-11-25T22:50:48.949033Z"
+     "iopub.execute_input": "2022-12-21T14:07:47.708233Z",
+     "iopub.status.busy": "2022-12-21T14:07:47.708062Z",
+     "iopub.status.idle": "2022-12-21T14:07:47.712057Z",
+     "shell.execute_reply": "2022-12-21T14:07:47.711766Z"
     }
    },
    "outputs": [
@@ -221,10 +221,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-25T22:50:48.951376Z",
-     "iopub.status.busy": "2022-11-25T22:50:48.951225Z",
-     "iopub.status.idle": "2022-11-25T22:50:48.954256Z",
-     "shell.execute_reply": "2022-11-25T22:50:48.953926Z"
+     "iopub.execute_input": "2022-12-21T14:07:47.713852Z",
+     "iopub.status.busy": "2022-12-21T14:07:47.713698Z",
+     "iopub.status.idle": "2022-12-21T14:07:47.716996Z",
+     "shell.execute_reply": "2022-12-21T14:07:47.716692Z"
     }
    },
    "outputs": [
@@ -257,10 +257,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-25T22:50:48.973521Z",
-     "iopub.status.busy": "2022-11-25T22:50:48.973257Z",
-     "iopub.status.idle": "2022-11-25T22:50:49.478754Z",
-     "shell.execute_reply": "2022-11-25T22:50:49.478298Z"
+     "iopub.execute_input": "2022-12-21T14:07:47.718599Z",
+     "iopub.status.busy": "2022-12-21T14:07:47.718331Z",
+     "iopub.status.idle": "2022-12-21T14:07:48.218011Z",
+     "shell.execute_reply": "2022-12-21T14:07:48.217600Z"
     }
    },
    "outputs": [
@@ -268,15 +268,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "WARNING:jax._src.lib.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:jax._src.lib.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+      "/home/simon/miniforge3/envs/chain_control/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
