--- a/docs/1_defining_an_environment.ipynb
+++ b/docs/1_defining_an_environment.ipynb
@@ -22,10 +22,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-21T14:07:46.855220Z",
-     "iopub.status.busy": "2022-12-21T14:07:46.854301Z",
-     "iopub.status.idle": "2022-12-21T14:07:47.446883Z",
-     "shell.execute_reply": "2022-12-21T14:07:47.446345Z"
+     "iopub.execute_input": "2022-12-27T15:59:38.760836Z",
+     "iopub.status.busy": "2022-12-27T15:59:38.760382Z",
+     "iopub.status.idle": "2022-12-27T15:59:39.319021Z",
+     "shell.execute_reply": "2022-12-27T15:59:39.318473Z"
     }
    },
    "outputs": [],
@@ -63,17 +63,17 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-21T14:07:47.451155Z",
-     "iopub.status.busy": "2022-12-21T14:07:47.450134Z",
-     "iopub.status.idle": "2022-12-21T14:07:47.571500Z",
-     "shell.execute_reply": "2022-12-21T14:07:47.571093Z"
+     "iopub.execute_input": "2022-12-27T15:59:39.323559Z",
+     "iopub.status.busy": "2022-12-27T15:59:39.322449Z",
+     "iopub.status.idle": "2022-12-27T15:59:39.435557Z",
+     "shell.execute_reply": "2022-12-27T15:59:39.435116Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentPhysics at 0x7f6255133cd0>"
+       "<__main__.SegmentPhysics at 0x7f1e4bf89f40>"
       ]
      },
      "execution_count": 2,
@@ -111,17 +111,17 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-21T14:07:47.596086Z",
-     "iopub.status.busy": "2022-12-21T14:07:47.595894Z",
-     "iopub.status.idle": "2022-12-21T14:07:47.600914Z",
-     "shell.execute_reply": "2022-12-21T14:07:47.600549Z"
+     "iopub.execute_input": "2022-12-27T15:59:39.465554Z",
+     "iopub.status.busy": "2022-12-27T15:59:39.465390Z",
+     "iopub.status.idle": "2022-12-27T15:59:39.470728Z",
+     "shell.execute_reply": "2022-12-27T15:59:39.470241Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentTask at 0x7f62550f2250>"
+       "<__main__.SegmentTask at 0x7f1e4bf4b370>"
       ]
      },
      "execution_count": 3,
@@ -177,10 +177,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-21T14:07:47.602544Z",
-     "iopub.status.busy": "2022-12-21T14:07:47.602415Z",
-     "iopub.status.idle": "2022-12-21T14:07:47.706124Z",
-     "shell.execute_reply": "2022-12-21T14:07:47.705733Z"
+     "iopub.execute_input": "2022-12-27T15:59:39.472402Z",
+     "iopub.status.busy": "2022-12-27T15:59:39.472294Z",
+     "iopub.status.idle": "2022-12-27T15:59:39.559862Z",
+     "shell.execute_reply": "2022-12-27T15:59:39.559394Z"
     }
    },
    "outputs": [],
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-21T14:07:47.708233Z",
-     "iopub.status.busy": "2022-12-21T14:07:47.708062Z",
-     "iopub.status.idle": "2022-12-21T14:07:47.712057Z",
-     "shell.execute_reply": "2022-12-21T14:07:47.711766Z"
+     "iopub.execute_input": "2022-12-27T15:59:39.561971Z",
+     "iopub.status.busy": "2022-12-27T15:59:39.561778Z",
+     "iopub.status.idle": "2022-12-27T15:59:39.566355Z",
+     "shell.execute_reply": "2022-12-27T15:59:39.565976Z"
     }
    },
    "outputs": [
@@ -221,10 +221,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-21T14:07:47.713852Z",
-     "iopub.status.busy": "2022-12-21T14:07:47.713698Z",
-     "iopub.status.idle": "2022-12-21T14:07:47.716996Z",
-     "shell.execute_reply": "2022-12-21T14:07:47.716692Z"
+     "iopub.execute_input": "2022-12-27T15:59:39.568019Z",
+     "iopub.status.busy": "2022-12-27T15:59:39.567906Z",
+     "iopub.status.idle": "2022-12-27T15:59:39.571028Z",
+     "shell.execute_reply": "2022-12-27T15:59:39.570722Z"
     }
    },
    "outputs": [
@@ -257,10 +257,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-21T14:07:47.718599Z",
-     "iopub.status.busy": "2022-12-21T14:07:47.718331Z",
-     "iopub.status.idle": "2022-12-21T14:07:48.218011Z",
-     "shell.execute_reply": "2022-12-21T14:07:48.217600Z"
+     "iopub.execute_input": "2022-12-27T15:59:39.572577Z",
+     "iopub.status.busy": "2022-12-27T15:59:39.572460Z",
+     "iopub.status.idle": "2022-12-27T15:59:40.040049Z",
+     "shell.execute_reply": "2022-12-27T15:59:40.039660Z"
     }
    },
    "outputs": [
