--- a/docs/1_defining_an_environment.ipynb
+++ b/docs/1_defining_an_environment.ipynb
@@ -22,10 +22,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T15:59:38.760836Z",
-     "iopub.status.busy": "2022-12-27T15:59:38.760382Z",
-     "iopub.status.idle": "2022-12-27T15:59:39.319021Z",
-     "shell.execute_reply": "2022-12-27T15:59:39.318473Z"
+     "iopub.execute_input": "2022-12-27T20:08:15.381432Z",
+     "iopub.status.busy": "2022-12-27T20:08:15.380441Z",
+     "iopub.status.idle": "2022-12-27T20:08:15.958028Z",
+     "shell.execute_reply": "2022-12-27T20:08:15.957519Z"
     }
    },
    "outputs": [],
@@ -63,17 +63,17 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T15:59:39.323559Z",
-     "iopub.status.busy": "2022-12-27T15:59:39.322449Z",
-     "iopub.status.idle": "2022-12-27T15:59:39.435557Z",
-     "shell.execute_reply": "2022-12-27T15:59:39.435116Z"
+     "iopub.execute_input": "2022-12-27T20:08:15.962263Z",
+     "iopub.status.busy": "2022-12-27T20:08:15.961162Z",
+     "iopub.status.idle": "2022-12-27T20:08:16.083829Z",
+     "shell.execute_reply": "2022-12-27T20:08:16.083121Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentPhysics at 0x7f1e4bf89f40>"
+       "<__main__.SegmentPhysics at 0x7f9f8814f160>"
       ]
      },
      "execution_count": 2,
@@ -111,17 +111,17 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T15:59:39.465554Z",
-     "iopub.status.busy": "2022-12-27T15:59:39.465390Z",
-     "iopub.status.idle": "2022-12-27T15:59:39.470728Z",
-     "shell.execute_reply": "2022-12-27T15:59:39.470241Z"
+     "iopub.execute_input": "2022-12-27T20:08:16.107664Z",
+     "iopub.status.busy": "2022-12-27T20:08:16.107492Z",
+     "iopub.status.idle": "2022-12-27T20:08:16.112886Z",
+     "shell.execute_reply": "2022-12-27T20:08:16.112542Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentTask at 0x7f1e4bf4b370>"
+       "<__main__.SegmentTask at 0x7f9f2e67c2e0>"
       ]
      },
      "execution_count": 3,
@@ -177,10 +177,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T15:59:39.472402Z",
-     "iopub.status.busy": "2022-12-27T15:59:39.472294Z",
-     "iopub.status.idle": "2022-12-27T15:59:39.559862Z",
-     "shell.execute_reply": "2022-12-27T15:59:39.559394Z"
+     "iopub.execute_input": "2022-12-27T20:08:16.114613Z",
+     "iopub.status.busy": "2022-12-27T20:08:16.114491Z",
+     "iopub.status.idle": "2022-12-27T20:08:16.216627Z",
+     "shell.execute_reply": "2022-12-27T20:08:16.216157Z"
     }
    },
    "outputs": [],
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T15:59:39.561971Z",
-     "iopub.status.busy": "2022-12-27T15:59:39.561778Z",
-     "iopub.status.idle": "2022-12-27T15:59:39.566355Z",
-     "shell.execute_reply": "2022-12-27T15:59:39.565976Z"
+     "iopub.execute_input": "2022-12-27T20:08:16.218682Z",
+     "iopub.status.busy": "2022-12-27T20:08:16.218560Z",
+     "iopub.status.idle": "2022-12-27T20:08:16.222735Z",
+     "shell.execute_reply": "2022-12-27T20:08:16.222281Z"
     }
    },
    "outputs": [
@@ -221,10 +221,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T15:59:39.568019Z",
-     "iopub.status.busy": "2022-12-27T15:59:39.567906Z",
-     "iopub.status.idle": "2022-12-27T15:59:39.571028Z",
-     "shell.execute_reply": "2022-12-27T15:59:39.570722Z"
+     "iopub.execute_input": "2022-12-27T20:08:16.224480Z",
+     "iopub.status.busy": "2022-12-27T20:08:16.224210Z",
+     "iopub.status.idle": "2022-12-27T20:08:16.227261Z",
+     "shell.execute_reply": "2022-12-27T20:08:16.226954Z"
     }
    },
    "outputs": [
@@ -257,10 +257,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T15:59:39.572577Z",
-     "iopub.status.busy": "2022-12-27T15:59:39.572460Z",
-     "iopub.status.idle": "2022-12-27T15:59:40.040049Z",
-     "shell.execute_reply": "2022-12-27T15:59:40.039660Z"
+     "iopub.execute_input": "2022-12-27T20:08:16.228722Z",
+     "iopub.status.busy": "2022-12-27T20:08:16.228537Z",
+     "iopub.status.idle": "2022-12-27T20:08:16.707435Z",
+     "shell.execute_reply": "2022-12-27T20:08:16.706978Z"
     }
    },
    "outputs": [
