evaluate `run_tools.sh`

--- a/docs/2_collecting_data_from_an_environment.ipynb
+++ b/docs/2_collecting_data_from_an_environment.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:20.999797Z",
-     "iopub.status.busy": "2022-12-27T20:08:20.998718Z",
-     "iopub.status.idle": "2022-12-27T20:08:22.192673Z",
-     "shell.execute_reply": "2022-12-27T20:08:22.192251Z"
+     "iopub.execute_input": "2023-02-13T21:40:08.458119Z",
+     "iopub.status.busy": "2023-02-13T21:40:08.457528Z",
+     "iopub.status.idle": "2023-02-13T21:40:09.688764Z",
+     "shell.execute_reply": "2023-02-13T21:40:09.688257Z"
     }
    },
    "outputs": [
@@ -54,10 +54,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:22.194998Z",
-     "iopub.status.busy": "2022-12-27T20:08:22.194644Z",
-     "iopub.status.idle": "2022-12-27T20:08:22.285051Z",
-     "shell.execute_reply": "2022-12-27T20:08:22.284501Z"
+     "iopub.execute_input": "2023-02-13T21:40:09.691819Z",
+     "iopub.status.busy": "2023-02-13T21:40:09.691318Z",
+     "iopub.status.idle": "2023-02-13T21:40:09.797809Z",
+     "shell.execute_reply": "2023-02-13T21:40:09.797402Z"
     }
    },
    "outputs": [],
@@ -79,10 +79,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:22.286947Z",
-     "iopub.status.busy": "2022-12-27T20:08:22.286792Z",
-     "iopub.status.idle": "2022-12-27T20:08:22.289019Z",
-     "shell.execute_reply": "2022-12-27T20:08:22.288653Z"
+     "iopub.execute_input": "2023-02-13T21:40:09.799820Z",
+     "iopub.status.busy": "2023-02-13T21:40:09.799675Z",
+     "iopub.status.idle": "2023-02-13T21:40:09.802069Z",
+     "shell.execute_reply": "2023-02-13T21:40:09.801728Z"
     }
    },
    "outputs": [],
@@ -102,10 +102,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:22.290596Z",
-     "iopub.status.busy": "2022-12-27T20:08:22.290471Z",
-     "iopub.status.idle": "2022-12-27T20:08:22.295369Z",
-     "shell.execute_reply": "2022-12-27T20:08:22.294964Z"
+     "iopub.execute_input": "2023-02-13T21:40:09.803638Z",
+     "iopub.status.busy": "2023-02-13T21:40:09.803499Z",
+     "iopub.status.idle": "2023-02-13T21:40:09.809043Z",
+     "shell.execute_reply": "2023-02-13T21:40:09.808676Z"
     }
    },
    "outputs": [
@@ -137,10 +137,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:22.296967Z",
-     "iopub.status.busy": "2022-12-27T20:08:22.296828Z",
-     "iopub.status.idle": "2022-12-27T20:08:22.299514Z",
-     "shell.execute_reply": "2022-12-27T20:08:22.299227Z"
+     "iopub.execute_input": "2023-02-13T21:40:09.810778Z",
+     "iopub.status.busy": "2023-02-13T21:40:09.810507Z",
+     "iopub.status.idle": "2023-02-13T21:40:09.813298Z",
+     "shell.execute_reply": "2023-02-13T21:40:09.813024Z"
     }
    },
    "outputs": [
@@ -172,10 +172,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:22.301200Z",
-     "iopub.status.busy": "2022-12-27T20:08:22.301060Z",
-     "iopub.status.idle": "2022-12-27T20:08:22.304161Z",
-     "shell.execute_reply": "2022-12-27T20:08:22.303770Z"
+     "iopub.execute_input": "2023-02-13T21:40:09.814993Z",
+     "iopub.status.busy": "2023-02-13T21:40:09.814732Z",
+     "iopub.status.idle": "2023-02-13T21:40:09.817828Z",
+     "shell.execute_reply": "2023-02-13T21:40:09.817516Z"
     }
    },
    "outputs": [
@@ -199,10 +199,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:22.305654Z",
-     "iopub.status.busy": "2022-12-27T20:08:22.305508Z",
-     "iopub.status.idle": "2022-12-27T20:08:22.308231Z",
-     "shell.execute_reply": "2022-12-27T20:08:22.307927Z"
+     "iopub.execute_input": "2023-02-13T21:40:09.819227Z",
+     "iopub.status.busy": "2023-02-13T21:40:09.819024Z",
+     "iopub.status.idle": "2023-02-13T21:40:09.822370Z",
+     "shell.execute_reply": "2023-02-13T21:40:09.822044Z"
     }
    },
    "outputs": [
@@ -227,10 +227,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:22.309726Z",
-     "iopub.status.busy": "2022-12-27T20:08:22.309586Z",
-     "iopub.status.idle": "2022-12-27T20:08:22.312541Z",
-     "shell.execute_reply": "2022-12-27T20:08:22.312240Z"
+     "iopub.execute_input": "2023-02-13T21:40:09.824100Z",
+     "iopub.status.busy": "2023-02-13T21:40:09.823907Z",
+     "iopub.status.idle": "2023-02-13T21:40:09.827443Z",
+     "shell.execute_reply": "2023-02-13T21:40:09.827088Z"
     }
    },
    "outputs": [
@@ -254,10 +254,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:22.313934Z",
-     "iopub.status.busy": "2022-12-27T20:08:22.313797Z",
-     "iopub.status.idle": "2022-12-27T20:08:22.316452Z",
-     "shell.execute_reply": "2022-12-27T20:08:22.316148Z"
+     "iopub.execute_input": "2023-02-13T21:40:09.828870Z",
+     "iopub.status.busy": "2023-02-13T21:40:09.828716Z",
+     "iopub.status.idle": "2023-02-13T21:40:09.831495Z",
+     "shell.execute_reply": "2023-02-13T21:40:09.831196Z"
     }
    },
    "outputs": [
@@ -288,13 +288,31 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:22.318032Z",
-     "iopub.status.busy": "2022-12-27T20:08:22.317787Z",
-     "iopub.status.idle": "2022-12-27T20:08:23.895184Z",
-     "shell.execute_reply": "2022-12-27T20:08:23.894711Z"
+     "iopub.execute_input": "2023-02-13T21:40:09.833069Z",
+     "iopub.status.busy": "2023-02-13T21:40:09.832865Z",
+     "iopub.status.idle": "2023-02-13T21:40:11.466905Z",
+     "shell.execute_reply": "2023-02-13T21:40:11.466503Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Deprecated (because too slow). Use `tree_batch` instead.\n",
+      "Warning: Deprecated (because too slow). Use `tree_batch` instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Deprecated (because too slow). Use `tree_batch` instead.\n",
+      "Warning: Deprecated (because too slow). Use `tree_batch` instead.\n",
+      "Warning: Deprecated (because too slow). Use `tree_batch` instead.\n"
+     ]
+    }
+   ],
    "source": [
     "train_sample = sample_feedforward_and_collect(\n",
     "    env, \n",
@@ -310,10 +328,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:23.897693Z",
-     "iopub.status.busy": "2022-12-27T20:08:23.897557Z",
-     "iopub.status.idle": "2022-12-27T20:08:23.900608Z",
-     "shell.execute_reply": "2022-12-27T20:08:23.900209Z"
+     "iopub.execute_input": "2023-02-13T21:40:11.468709Z",
+     "iopub.status.busy": "2023-02-13T21:40:11.468545Z",
+     "iopub.status.idle": "2023-02-13T21:40:11.471446Z",
+     "shell.execute_reply": "2023-02-13T21:40:11.471080Z"
     }
    },
    "outputs": [
@@ -337,10 +355,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:23.902107Z",
-     "iopub.status.busy": "2022-12-27T20:08:23.901995Z",
-     "iopub.status.idle": "2022-12-27T20:08:23.904722Z",
-     "shell.execute_reply": "2022-12-27T20:08:23.904414Z"
+     "iopub.execute_input": "2023-02-13T21:40:11.473268Z",
+     "iopub.status.busy": "2023-02-13T21:40:11.472942Z",
+     "iopub.status.idle": "2023-02-13T21:40:11.476082Z",
+     "shell.execute_reply": "2023-02-13T21:40:11.475678Z"
     }
    },
    "outputs": [
@@ -364,10 +382,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:23.906239Z",
-     "iopub.status.busy": "2022-12-27T20:08:23.905993Z",
-     "iopub.status.idle": "2022-12-27T20:08:23.908344Z",
-     "shell.execute_reply": "2022-12-27T20:08:23.908041Z"
+     "iopub.execute_input": "2023-02-13T21:40:11.477997Z",
+     "iopub.status.busy": "2023-02-13T21:40:11.477831Z",
+     "iopub.status.idle": "2023-02-13T21:40:11.480737Z",
+     "shell.execute_reply": "2023-02-13T21:40:11.480395Z"
     }
    },
    "outputs": [
@@ -391,10 +409,10 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:23.909678Z",
-     "iopub.status.busy": "2022-12-27T20:08:23.909513Z",
-     "iopub.status.idle": "2022-12-27T20:08:23.911849Z",
-     "shell.execute_reply": "2022-12-27T20:08:23.911539Z"
+     "iopub.execute_input": "2023-02-13T21:40:11.482261Z",
+     "iopub.status.busy": "2023-02-13T21:40:11.482124Z",
+     "iopub.status.idle": "2023-02-13T21:40:11.485360Z",
+     "shell.execute_reply": "2023-02-13T21:40:11.485005Z"
     }
    },
    "outputs": [
@@ -418,10 +436,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:23.913377Z",
-     "iopub.status.busy": "2022-12-27T20:08:23.913148Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.022848Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.022366Z"
+     "iopub.execute_input": "2023-02-13T21:40:11.486942Z",
+     "iopub.status.busy": "2023-02-13T21:40:11.486785Z",
+     "iopub.status.idle": "2023-02-13T21:40:11.629771Z",
+     "shell.execute_reply": "2023-02-13T21:40:11.629124Z"
     }
    },
    "outputs": [
@@ -457,10 +475,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.024677Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.024498Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.108570Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.108177Z"
+     "iopub.execute_input": "2023-02-13T21:40:11.631926Z",
+     "iopub.status.busy": "2023-02-13T21:40:11.631738Z",
+     "iopub.status.idle": "2023-02-13T21:40:11.716140Z",
+     "shell.execute_reply": "2023-02-13T21:40:11.715722Z"
     }
    },
    "outputs": [
@@ -496,10 +514,10 @@
    "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.110120Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.109983Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.113002Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.112678Z"
+     "iopub.execute_input": "2023-02-13T21:40:11.717818Z",
+     "iopub.status.busy": "2023-02-13T21:40:11.717677Z",
+     "iopub.status.idle": "2023-02-13T21:40:11.720706Z",
+     "shell.execute_reply": "2023-02-13T21:40:11.720378Z"
     }
    },
    "outputs": [
@@ -550,13 +568,22 @@
    "execution_count": 18,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.114630Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.114327Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.784456Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.783889Z"
+     "iopub.execute_input": "2023-02-13T21:40:11.722204Z",
+     "iopub.status.busy": "2023-02-13T21:40:11.722054Z",
+     "iopub.status.idle": "2023-02-13T21:40:12.398195Z",
+     "shell.execute_reply": "2023-02-13T21:40:12.397748Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Deprecated (because too slow). Use `tree_batch` instead.\n",
+      "Warning: Deprecated (because too slow). Use `tree_batch` instead.\n"
+     ]
+    }
+   ],
    "source": [
     "reference_source, replay_sample, _ = sample_feedforward_collect_and_make_source(env, seeds = [0,17])\n",
     "# we don't need the replay_sample anymore\n",
@@ -568,10 +595,10 @@
    "execution_count": 19,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.786369Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.786233Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.788845Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.788420Z"
+     "iopub.execute_input": "2023-02-13T21:40:12.399915Z",
+     "iopub.status.busy": "2023-02-13T21:40:12.399773Z",
+     "iopub.status.idle": "2023-02-13T21:40:12.402194Z",
+     "shell.execute_reply": "2023-02-13T21:40:12.401817Z"
     }
    },
    "outputs": [],
@@ -591,10 +618,10 @@
    "execution_count": 20,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.790550Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.790446Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.817356Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.817000Z"
+     "iopub.execute_input": "2023-02-13T21:40:12.403664Z",
+     "iopub.status.busy": "2023-02-13T21:40:12.403517Z",
+     "iopub.status.idle": "2023-02-13T21:40:12.430558Z",
+     "shell.execute_reply": "2023-02-13T21:40:12.430110Z"
     }
    },
    "outputs": [
@@ -630,10 +657,10 @@
    "execution_count": 21,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.819280Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.819154Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.851923Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.851546Z"
+     "iopub.execute_input": "2023-02-13T21:40:12.432466Z",
+     "iopub.status.busy": "2023-02-13T21:40:12.432265Z",
+     "iopub.status.idle": "2023-02-13T21:40:12.464955Z",
+     "shell.execute_reply": "2023-02-13T21:40:12.464566Z"
     }
    },
    "outputs": [
@@ -657,10 +684,10 @@
    "execution_count": 22,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.853817Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.853691Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.857776Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.857452Z"
+     "iopub.execute_input": "2023-02-13T21:40:12.466707Z",
+     "iopub.status.busy": "2023-02-13T21:40:12.466569Z",
+     "iopub.status.idle": "2023-02-13T21:40:12.470758Z",
+     "shell.execute_reply": "2023-02-13T21:40:12.470394Z"
     }
    },
    "outputs": [
@@ -691,10 +718,10 @@
    "execution_count": 23,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.859507Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.859381Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.862133Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.861820Z"
+     "iopub.execute_input": "2023-02-13T21:40:12.472402Z",
+     "iopub.status.busy": "2023-02-13T21:40:12.472170Z",
+     "iopub.status.idle": "2023-02-13T21:40:12.474637Z",
+     "shell.execute_reply": "2023-02-13T21:40:12.474323Z"
     }
    },
    "outputs": [
@@ -718,10 +745,10 @@
    "execution_count": 24,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.863572Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.863356Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.867405Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.867094Z"
+     "iopub.execute_input": "2023-02-13T21:40:12.476144Z",
+     "iopub.status.busy": "2023-02-13T21:40:12.476002Z",
+     "iopub.status.idle": "2023-02-13T21:40:12.479900Z",
+     "shell.execute_reply": "2023-02-13T21:40:12.479562Z"
     }
    },
    "outputs": [
@@ -747,10 +774,10 @@
    "execution_count": 25,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.868772Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.868671Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.871424Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.871108Z"
+     "iopub.execute_input": "2023-02-13T21:40:12.481371Z",
+     "iopub.status.busy": "2023-02-13T21:40:12.481223Z",
+     "iopub.status.idle": "2023-02-13T21:40:12.483666Z",
+     "shell.execute_reply": "2023-02-13T21:40:12.483374Z"
     }
    },
    "outputs": [
@@ -776,10 +803,10 @@
    "execution_count": 26,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.873085Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.872904Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.876732Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.876442Z"
+     "iopub.execute_input": "2023-02-13T21:40:12.485246Z",
+     "iopub.status.busy": "2023-02-13T21:40:12.485019Z",
+     "iopub.status.idle": "2023-02-13T21:40:12.488888Z",
+     "shell.execute_reply": "2023-02-13T21:40:12.488583Z"
     }
    },
    "outputs": [
@@ -822,10 +849,10 @@
    "execution_count": 27,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:24.878313Z",
-     "iopub.status.busy": "2022-12-27T20:08:24.878137Z",
-     "iopub.status.idle": "2022-12-27T20:08:24.881935Z",
-     "shell.execute_reply": "2022-12-27T20:08:24.881667Z"
+     "iopub.execute_input": "2023-02-13T21:40:12.490511Z",
+     "iopub.status.busy": "2023-02-13T21:40:12.490365Z",
+     "iopub.status.idle": "2023-02-13T21:40:12.494320Z",
+     "shell.execute_reply": "2023-02-13T21:40:12.494014Z"
     }
    },
    "outputs": [
