--- a/docs/1_defining_an_environment.ipynb
+++ b/docs/1_defining_an_environment.ipynb
@@ -22,10 +22,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:15.381432Z",
-     "iopub.status.busy": "2022-12-27T20:08:15.380441Z",
-     "iopub.status.idle": "2022-12-27T20:08:15.958028Z",
-     "shell.execute_reply": "2022-12-27T20:08:15.957519Z"
+     "iopub.execute_input": "2023-02-13T21:39:55.708515Z",
+     "iopub.status.busy": "2023-02-13T21:39:55.708048Z",
+     "iopub.status.idle": "2023-02-13T21:39:56.275934Z",
+     "shell.execute_reply": "2023-02-13T21:39:56.275411Z"
     }
    },
    "outputs": [],
@@ -34,7 +34,7 @@
     "from dm_control import mujoco\n",
     "from collections import OrderedDict\n",
     "import numpy as np \n",
-    "from cc.env.envs.common import read_model, ASSETS \n",
+    "from cc.env.envs.common import ASSETS \n",
     "from cc.utils.sample_from_spec import _spec_from_observation\n",
     "from cc.env import make_env"
    ]
@@ -59,24 +59,96 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Mujoco Simulation is defined by a `.xml` file which may contain the following content:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:15.962263Z",
-     "iopub.status.busy": "2022-12-27T20:08:15.961162Z",
-     "iopub.status.idle": "2022-12-27T20:08:16.083829Z",
-     "shell.execute_reply": "2022-12-27T20:08:16.083121Z"
+     "iopub.execute_input": "2023-02-13T21:39:56.279655Z",
+     "iopub.status.busy": "2023-02-13T21:39:56.279175Z",
+     "iopub.status.idle": "2023-02-13T21:39:56.283995Z",
+     "shell.execute_reply": "2023-02-13T21:39:56.283611Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "mujoco_xml_string = r\"\"\"\n",
+    "<mujoco model=\"kinematic-chain\">\n",
+    "  <include file=\"./common/skybox.xml\"/>\n",
+    "  <include file=\"./common/visual.xml\"/>\n",
+    "  <include file=\"./common/materials.xml\"/>\n",
+    "  \n",
+    "  <option timestep=\"0.001\" integrator=\"RK4\">\n",
+    "    <flag contact=\"disable\" gravity=\"disable\" energy=\"enable\"/>\n",
+    "  </option>\n",
+    "  \n",
+    "  <default>\n",
+    "    <default class=\"pole\">\n",
+    "      <joint type=\"hinge\" axis=\"0 1 0\" stiffness=\"10\" springref=\"0\" damping=\"1e-1\"/>\n",
+    "      <geom type=\"capsule\" fromto=\"0 0 0 0 0 1\" size=\"0.045\" material=\"self\" mass=\".1\"/>\n",
+    "    </default>\n",
+    "  </default>\n",
+    "  \n",
+    "  <worldbody>\n",
+    "    <light name=\"light\" pos=\"0 0 36\"/>\n",
+    "    \n",
+    "    <camera name=\"fixed\" pos=\"0 -6 1\" zaxis=\"0 -1 0\"/>\n",
+    "    <camera name=\"lookatcart\" mode=\"targetbody\" target=\"cart\" pos=\"0 -2 2\"/>\n",
+    "    \n",
+    "    <geom name=\"floor\" pos=\"0 0 -.25\" size=\"100 100 .2\" type=\"plane\" material=\"grid\"/>\n",
+    "    <geom name=\"rail1\" type=\"capsule\" pos=\"0  .07 2\" zaxis=\"1 0 0\" size=\"0.02 20\" material=\"decoration\" />\n",
+    "    <geom name=\"rail2\" type=\"capsule\" pos=\"0 -.07 2\" zaxis=\"1 0 0\" size=\"0.02 20\" material=\"decoration\" />\n",
+    "    \n",
+    "\n",
+    "    <body name=\"cart\" pos=\"0 0 2\">\n",
+    "      <joint name=\"slider\" type=\"slide\" limited=\"true\" axis=\"1 0 0\" range=\"-999.8 999.8\" damping=\"1e-3\"/>\n",
+    "      <geom name=\"cart\" type=\"box\" size=\"0.1 0.15 0.05\" material=\"self\"  mass=\"1\"/>\n",
+    "      <body name=\"pole_1\" childclass=\"pole\" euler=\"0 180 0\" pos=\"0 0 -0.1\">\n",
+    "        <joint name=\"hinge_1\"/>\n",
+    "        <geom name=\"pole_1\"/>\n",
+    "        <body name=\"pole_2\" childclass=\"pole\" pos=\"0 0 1.1\">\n",
+    "          <joint name=\"hinge_2\"/>\n",
+    "          <geom name=\"pole_2\"/>\n",
+    "          <body name=\"segment_end\" pos=\"0 0 1.0\"/>\n",
+    "      \t</body>\n",
+    "      </body>\n",
+    "    </body>\n",
+    "  </worldbody>\n",
+    "\n",
+    "  <actuator>\n",
+    "    <motor name=\"slide\" joint=\"slider\" gear=\"5\" ctrllimited=\"false\"/>\n",
+    "  </actuator>\n",
+    "  \n",
+    "</mujoco>\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-02-13T21:39:56.286566Z",
+     "iopub.status.busy": "2023-02-13T21:39:56.286195Z",
+     "iopub.status.idle": "2023-02-13T21:39:56.414137Z",
+     "shell.execute_reply": "2023-02-13T21:39:56.413659Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentPhysics at 0x7f9f8814f160>"
+       "<__main__.SegmentPhysics at 0x7fd9742cb040>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,8 +165,7 @@
     "\n",
     "\n",
     "def load_physics():\n",
-    "    xml_path = \"two_segments_v1.xml\"\n",
-    "    return SegmentPhysics.from_xml_string(read_model(xml_path), assets=ASSETS)\n",
+    "    return SegmentPhysics.from_xml_string(mujoco_xml_string, assets=ASSETS)\n",
     "\n",
     "load_physics()"
    ]
@@ -108,23 +179,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:16.107664Z",
-     "iopub.status.busy": "2022-12-27T20:08:16.107492Z",
-     "iopub.status.idle": "2022-12-27T20:08:16.112886Z",
-     "shell.execute_reply": "2022-12-27T20:08:16.112542Z"
+     "iopub.execute_input": "2023-02-13T21:39:56.439202Z",
+     "iopub.status.busy": "2023-02-13T21:39:56.439014Z",
+     "iopub.status.idle": "2023-02-13T21:39:56.444385Z",
+     "shell.execute_reply": "2023-02-13T21:39:56.444010Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.SegmentTask at 0x7f9f2e67c2e0>"
+       "<__main__.SegmentTask at 0x7fd974288e50>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,13 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:16.114613Z",
-     "iopub.status.busy": "2022-12-27T20:08:16.114491Z",
-     "iopub.status.idle": "2022-12-27T20:08:16.216627Z",
-     "shell.execute_reply": "2022-12-27T20:08:16.216157Z"
+     "iopub.execute_input": "2023-02-13T21:39:56.445949Z",
+     "iopub.status.busy": "2023-02-13T21:39:56.445829Z",
+     "iopub.status.idle": "2023-02-13T21:39:56.553327Z",
+     "shell.execute_reply": "2023-02-13T21:39:56.552952Z"
     }
    },
    "outputs": [],
@@ -190,13 +261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:16.218682Z",
-     "iopub.status.busy": "2022-12-27T20:08:16.218560Z",
-     "iopub.status.idle": "2022-12-27T20:08:16.222735Z",
-     "shell.execute_reply": "2022-12-27T20:08:16.222281Z"
+     "iopub.execute_input": "2023-02-13T21:39:56.555280Z",
+     "iopub.status.busy": "2023-02-13T21:39:56.555100Z",
+     "iopub.status.idle": "2023-02-13T21:39:56.558639Z",
+     "shell.execute_reply": "2023-02-13T21:39:56.558346Z"
     }
    },
    "outputs": [
@@ -206,7 +277,7 @@
        "TimeStep(step_type=<StepType.FIRST: 0>, reward=None, discount=None, observation=OrderedDict([('xpos_of_segment_end', array([2.5717583e-16], dtype=float32))]))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,13 +289,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:16.224480Z",
-     "iopub.status.busy": "2022-12-27T20:08:16.224210Z",
-     "iopub.status.idle": "2022-12-27T20:08:16.227261Z",
-     "shell.execute_reply": "2022-12-27T20:08:16.226954Z"
+     "iopub.execute_input": "2023-02-13T21:39:56.560212Z",
+     "iopub.status.busy": "2023-02-13T21:39:56.560060Z",
+     "iopub.status.idle": "2023-02-13T21:39:56.563109Z",
+     "shell.execute_reply": "2023-02-13T21:39:56.562796Z"
     }
    },
    "outputs": [
@@ -234,7 +305,7 @@
        "TimeStep(step_type=<StepType.MID: 1>, reward=array(0., dtype=float32), discount=array(1., dtype=float32), observation=OrderedDict([('xpos_of_segment_end', array([4.913601e-06], dtype=float32))]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,13 +325,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-27T20:08:16.228722Z",
-     "iopub.status.busy": "2022-12-27T20:08:16.228537Z",
-     "iopub.status.idle": "2022-12-27T20:08:16.707435Z",
-     "shell.execute_reply": "2022-12-27T20:08:16.706978Z"
+     "iopub.execute_input": "2023-02-13T21:39:56.564705Z",
+     "iopub.status.busy": "2023-02-13T21:39:56.564424Z",
+     "iopub.status.idle": "2023-02-13T21:40:03.224057Z",
+     "shell.execute_reply": "2023-02-13T21:40:03.223449Z"
     }
    },
    "outputs": [
@@ -287,7 +358,8 @@
     "actor = RandomActor(env.action_spec(), reset_key=True)\n",
     "\n",
     "# uncomment to launch a viewer\n",
-    "#launch_viewer(env, actor)"
+    "# uncommented as it would otherwise pop up while testing\n",
+    "# launch_viewer(env, actor)"
    ]
   },
   {
